k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ridematch-ingress
  namespace: ridematch

spec:
  ingressClassName: nginx

  rules:
    - host: ridematch.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ridematch-backend-service

                port:
                  number: 5001
